--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       <a href="#EXP" class="w3-bar-item w3-button w3-padding-large">EXP</a>
       <a href="#SWE" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SWE</a>
       <a href="#ML" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ML</a>
-      <a href="#RESUME" class="w3-bar-item w3-button w3-padding-large w3-hide-small">RESUME</a>
       <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
       <div class="w3-dropdown-hover w3-hide-small">
         <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
@@ -43,8 +42,6 @@
     <a href="#EXP" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">EXP</a>
     <a href="#SWE" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SWE</a>
     <a href="#ML" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ML</a>
-    <a href="#RESUME" class="w3-bar-item w3-button w3-padding-large" 
-    href="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing" >RESUME</a>
     <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
   </div>
 
@@ -54,7 +51,7 @@
     <div class="seperator gradient">
     </div>
   </section> -->
-  <div id="#HOME" class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
+  <div class="w3-display-middle w3-panel w3-center" style="background-color: transparent">
     <div class="centered" style>
       <div class="typewriter">
         <h1> Life is greater with Coding</h1>
@@ -72,16 +69,16 @@
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
-        <br>
-        <div class="w3-margin-bottom text-theme text-xs md:text-lg">Software Engineer Intern</div>
-        <div class="hidden md:flex text-sm items-center text-gray-400">(May 2022 - July 2022)</div>
+
+        <div class="w3-twothird w3-margin-bottom ">Software Engineer Intern (May 2022 - July 2022)</div>
+        <!-- <div class="w3-twothird"></div> -->
       </div>
-      <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
+      <!-- <div class="w3-full border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%" class="w3-hover-opacity">
-        <br>
+
         <div class="w3-margin-bottom text-theme text-xs md:text-lg">Algorithm Engineer Intern</div>
         <div class="hidden md:flex text-sm items-center text-gray-400">(Aug 2022 - Jan 2023)</div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
