--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/w3images/MCFORART.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>MC for ART</b></p>
           <p class="w3-opacity">IEEE Hackathon</p>
@@ -166,7 +166,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/w3images/NotnowLizards.png" alt="Paris" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Not now lizards!</b></p>
           <p class="w3-opacity">MLDA</p>
@@ -175,7 +175,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/w3images/Titanic.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Titanic Disaster Prediction</b></p>
           <p class="w3-opacity"></p>
