--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
       <a href="#HOME" class="w3-bar-item w3-button w3-padding-large">HOME</a>
       <a href="#EXP" class="w3-bar-item w3-button w3-padding-large">EXP</a>
+      <a href="#HACK" class="w3-bar-item w3-button w3-padding-large">HACK</a>
       <a href="#SWE" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SWE</a>
       <a href="#ML" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ML</a>
       <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
@@ -40,6 +41,7 @@
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
     <a href="#HOME" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">HOME</a>
     <a href="#EXP" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">EXP</a>
+    <a href="#HACK" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">HACK</a>
     <a href="#SWE" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SWE</a>
     <a href="#ML" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ML</a>
     <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
@@ -79,6 +81,44 @@
         <div class="w3-margin-bottom text-theme text-xs md:text-lg">Algorithm Engineer Intern</div>
         <div class="hidden md:flex text-sm items-center text-gray-400">(Aug 2022 - Jan 2023)</div>
       </div> -->
+    </div>
+  </div>
+</div>
+<!--#HACK-->
+<div class="w3-black" id="HACK">
+  <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+    <h2 class="w3-wide w3-center">HACKATHONS!</h2>
+    <p class="w3-opacity w3-center"><i>Won some lost many</i></p><br>
+
+    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/SCL.png" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>Shopee Code League</b></p>
+          <p class="w3-opacity">Shopee</p>
+          <p>Algorithm Challenge</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+        </div>
+      </div>
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/MCFORART.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>MC for ART</b></p>
+          <p class="w3-opacity">IEEE Hackathon</p>
+          <p>Telebot with google script API. CNN model in google cloud, Image Classification, Keras</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+        </div>
+      </div>
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/DSTA.png" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>Today-I-Learned</b></p>
+          <p class="w3-opacity">DSTA, Hackathon</p>
+          <p>Prepared Data through Data Cleaning methods and modified parameters for optimization. 
+            Utilized OpenCV and RESNET for our model to identify objects from Datasets</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -157,12 +197,12 @@
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/MCFORART.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
-          <p><b>MC for ART</b></p>
-          <p class="w3-opacity">IEEE Hackathon</p>
-          <p>telebot with google script API. CNN model in google cloud, Image Classification, Keras</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+          <p><b>AI Test Kitchen</b></p>
+          <p class="w3-opacity">Google</p>
+          <p>Natural Language Processing</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
@@ -186,25 +226,6 @@
     </div>
     <!-- Second Row of ML -->
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-      <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>Today-I-Learned</b></p>
-          <p class="w3-opacity">DSTA, Hackathon</p>
-          <p>Prepared Data through Data Cleaning methods and modified parameters for optimization. 
-            Utilized OpenCV and RESNET for our model to identify objects from Datasets</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
-        </div>
-      </div>
-      <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
-        <div class="w3-container w3-white">
-          <p><b>AI Test Kitchen</b></p>
-          <p class="w3-opacity">Google</p>
-          <p>Natural Language Processing</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In Progress</button>
-        </div>
-      </div>
       <div class="w3-third w3-margin-bottom">
         <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
