--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/SCL.png" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/w3images/SCL2.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Shopee Code League</b></p>
           <p class="w3-opacity">Shopee</p>
@@ -104,7 +104,7 @@
         <img src="/w3images/MCFORART.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>MC for ART</b></p>
-          <p class="w3-opacity">IEEE Hackathon</p>
+          <p class="w3-opacity">IEEE INTUITION v8.0</p>
           <p>Telebot with google script API. CNN model in google cloud, Image Classification, Keras</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
         </div>
@@ -113,7 +113,7 @@
         <img src="/w3images/DSTA.png" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Today-I-Learned</b></p>
-          <p class="w3-opacity">DSTA, Hackathon</p>
+          <p class="w3-opacity">DSTA, BRAINHACK</p>
           <p>Prepared Data through Data Cleaning methods and modified parameters for optimization. 
             Utilized OpenCV and RESNET for our model to identify objects from Datasets</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
