--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         <div class="w3-twothird w3-margin-bottom ">Software Engineer Intern (May 2022 - July 2022)</div>
         <!-- <div class="w3-twothird"></div> -->
       </div>
-      <!-- <div class="w3-full border-2 border-white rounded-xl w3-margin-bottom">
+      <div class="w3-full border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%" class="w3-hover-opacity">
 
         <div class="w3-margin-bottom text-theme text-xs md:text-lg">Algorithm Engineer Intern</div>
         <div class="hidden md:flex text-sm items-center text-gray-400">(Aug 2022 - Jan 2023)</div>
-      </div> -->
+      </div>
     </div>
   </div>
 </div>
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/MCFORART.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/w3images/Intuition.png" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>MC for ART</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0</p>
