--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="w3-twothird w3-margin-bottom ">Software Engineer Intern (May 2022 - July 2022)</div>
         <!-- <div class="w3-twothird"></div> -->
       </div>
-      <div class="w3-full border-2 border-white rounded-xl w3-margin-bottom">
+      <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%" class="w3-hover-opacity">
 
         <div class="w3-margin-bottom text-theme text-xs md:text-lg">Algorithm Engineer Intern</div>
