--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
       <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
 
-        <div class="w3-third w3-margin-bottom ">Software Engineer Intern (May 2022 - July 2022)</div>
+        <div class="w3-margin-bottom ">Software Engineer Intern (May 2022 - July 2022)</div>
         <!-- <div class="w3-twothird"></div> -->
       </div>
       <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%" class="w3-hover-opacity">
 
-        <div class="w3-third w3-margin-bottom ">Algorithm Engineer Intern (Aug 2022 - Jan 2023)</div>
+        <div class="w3-margin-bottom ">Algorithm Engineer Intern (Aug 2022 - Jan 2023)</div>
       </div>
     </div>
   </div>
