--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
     <p class="w3-opacity w3-center"><i>A big thank you to every organisation for hiring me.</i></p><br>
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
-        <img src="/w3images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
+        <img src="/w3images/discover-market-logo-white-vertical.png" alt="DM Logo" width="500" height="600" style="width:100%" class="w3-hover-opacity">
 
         <div class="w3-margin-bottom ">Software Engineer Intern (May 2022 - July 2022)</div>
         <!-- <div class="w3-twothird"></div> -->
       </div>
       <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
-        <img src="/w3images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%" class="w3-hover-opacity">
+        <img src="/w3images/DSTA_Logo.png" alt="DSTA Logo" width="500" height="600" style="width:100%" class="w3-hover-opacity">
 
         <div class="w3-margin-bottom ">Algorithm Engineer Intern (Aug 2022 - Jan 2023)</div>
       </div>
