--- a/index.html
+++ b/index.html
@@ -71,13 +71,12 @@
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/discover-market-logo-white-vertical.png" alt="DM Logo" width="500" height="600" style="width:100%" class="w3-hover-opacity">
-
+        <br></br>
         <div class="w3-margin-bottom ">Software Engineer Intern (May 2022 - July 2022)</div>
-        <!-- <div class="w3-twothird"></div> -->
       </div>
       <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/DSTA_Logo.png" alt="DSTA Logo" width="500" height="600" style="width:100%" class="w3-hover-opacity">
-
+        <br></br>
         <div class="w3-margin-bottom ">Algorithm Engineer Intern (Aug 2022 - Jan 2023)</div>
       </div>
     </div>
@@ -93,7 +92,7 @@
       <div class="w3-third w3-margin-bottom">
         <img src="/w3images/SCL2.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
-          <p><b>Shopee Code League</b></p>
+          <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
           <p>Algorithm Challenge</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
@@ -102,9 +101,9 @@
       <div class="w3-third w3-margin-bottom">
         <img src="/w3images/Intuition.png" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
-          <p><b>MC for ART</b></p>
+          <p><b>INTUITION</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0</p>
-          <p>Telebot with google script API. CNN model in google cloud, Image Classification, Keras</p>
+          <p>MC for ART. Telebot with google script API. CNN model in google cloud, Image Classification, Keras</p>
           <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
         </div>
       </div>
