--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
       <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
         <br></br>
-        <div class="w3-margin-bottom ">Software Engineer Intern </div>
-        <div class="w3-magin-bottom">(May 2022 - July 2022)</div>
+        <div class="w3-margin-top ">Software Engineer Intern </div>
+        <div class="w3-margin-bottom">(May 2022 - July 2022)</div>
       </div>
       <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
         <img src="/w3images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%" class="w3-hover-opacity">
         <br></br>
-        <div class="w3-margin-bottom ">Algorithm Engineer Intern </div>
-        <div class="w3-magin-bottom">(Aug 2022 - Jan 2023)</div>
+        <div class="w3-margin-top">Algorithm Engineer Intern </div>
+        <div class="w3-margin-bottom">(Aug 2022 - Jan 2023)</div>
       </div>
     </div>
   </div>
