--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
     <h2 class="w3-wide w3-center">INTERNSHIP EXPERIENCE</h2>
     <p class="w3-opacity w3-center"><i>A big thank you to every organisation for hiring me.</i></p><br>
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-      <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
+      <div class="w3-third w3-margin-bottom">
         <img src="/w3images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
         <br></br>
         <div class="w3-margin-top ">Software Engineer Intern </div>
         <div class="w3-margin-bottom">(May 2022 - July 2022)</div>
       </div>
-      <div class="w3-third border-2 border-white rounded-xl w3-margin-bottom">
+      <div class="w3-third w3-margin-bottom">
         <img src="/w3images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%" class="w3-hover-opacity">
         <br></br>
         <div class="w3-margin-top">Algorithm Engineer Intern </div>
