--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
     <p class="w3-opacity w3-center"><i>A big thank you to every organisation for hiring me.</i></p><br>
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/discover-market-logo-white-vertical.png" alt="DM Logo" style="width:100%" class="w3-hover-opacity">
         <br></br>
         <div class="w3-margin-top ">Software Engineer Intern </div>
         <div class="w3-margin-bottom">(May 2022 - July 2022)</div>
       </div>
       <div class="w3-third w3-margin-bottom">
         <br></br>
-        <img src="/w3images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/DSTA_Logo.png" alt="DSTA Logo" style="width:100%" class="w3-hover-opacity">
         <br></br>
         <div class="w3-margin-top">Algorithm Engineer Intern </div>
         <div class="w3-margin-bottom">(Aug 2022 - Jan 2023)</div>
@@ -93,7 +93,7 @@
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/SCL2.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/SCL2.jpeg" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Shopee Code League 2022</b></p>
           <p class="w3-opacity">Shopee</p>
@@ -102,7 +102,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/Intuition.png" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/Intuition.png" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>INTUITION</b></p>
           <p class="w3-opacity">IEEE INTUITION v8.0</p>
@@ -111,7 +111,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/DSTA.png" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/DSTA.png" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Today-I-Learned</b></p>
           <p class="w3-opacity">DSTA, BRAINHACK</p>
@@ -131,7 +131,7 @@
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Tic-Tac-Toe</b></p>
           <p class="w3-opacity">CS50x Harvard, Cambridge</p>
@@ -140,7 +140,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/Sudoku.jpeg" alt="Paris" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Sudoku Auto-generation</b></p>
           <p class="w3-opacity">NTU</p>
@@ -149,7 +149,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Crossy Road</b></p>
           <p class="w3-opacity">NTU</p>
@@ -161,7 +161,7 @@
     <!-- Second row of SWE -->
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>E-commerce Website</b></p>
           <p class="w3-opacity">NTU</p>
@@ -170,7 +170,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Covid-19 Application</b></p>
           <p class="w3-opacity">NTU</p>
@@ -179,7 +179,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Twilio Chatbot</b></p>
           <p class="w3-opacity">Personal</p>
@@ -198,7 +198,7 @@
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>AI Test Kitchen</b></p>
           <p class="w3-opacity">Google</p>
@@ -207,7 +207,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/NotnowLizards.png" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/NotnowLizards.png" alt="Paris" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Not now lizards!</b></p>
           <p class="w3-opacity">MLDA</p>
@@ -216,7 +216,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/Titanic.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/Titanic.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Titanic Disaster Prediction</b></p>
           <p class="w3-opacity"></p>
@@ -228,7 +228,7 @@
     <!-- Second Row of ML -->
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Basic MediaPipe</b></p>
           <p class="w3-opacity"></p>
@@ -260,7 +260,7 @@
 
 
 <!-- Image of location/map -->
-<img src="/w3images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+<img src="/images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 
 <!-- Footer -->
