--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/TicTacToe.png" alt="New York" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Tic-Tac-Toe</b></p>
           <p class="w3-opacity">CS50x Harvard, Cambridge</p>
