--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
-        <img src="/images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <img src="/images/CrossyRoad.png" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b>Crossy Road</b></p>
           <p class="w3-opacity">NTU</p>
