--- a/index.html
+++ b/index.html
@@ -262,6 +262,8 @@
 <!-- Image of location/map -->
 <img src="/images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
+<iframe src="https://hubs.mozilla.com/pumP975?embed_token=9e003f18c1cc7554ac3ec3fccc2a998f" style="width: 1024px; height: 768px;" allow="microphone; camera; vr; speaker;"></iframe>
+
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-black w3-xlarge">
