--- a/index.html
+++ b/index.html
@@ -262,7 +262,15 @@
 <!-- Image of location/map -->
 <img src="/images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
-<iframe src="https://hubs.mozilla.com/pumP975?embed_token=9e003f18c1cc7554ac3ec3fccc2a998f" style="width: 1024px; height: 768px;" allow="microphone; camera; vr; speaker;"></iframe>
+<div class="w3-container w3-center w3-padding-64 " id="ART">
+
+  <i src="https://hubs.mozilla.com/pumP975?embed_token=9e003f18c1cc7554ac3ec3fccc2a998f" style="width: 1024px; height: 768px;" allow="microphone; camera; vr; speaker;"></iframe>
+
+</div>
+
+
+
+
 
 
 <!-- Footer -->
