--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="#HACK" class="w3-bar-item w3-button w3-padding-large">HACK</a>
       <a href="#SWE" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SWE</a>
       <a href="#ML" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ML</a>
+      <a href="#ART" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ML</a>
       <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
       <div class="w3-dropdown-hover w3-hide-small">
         <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
@@ -30,7 +31,7 @@
           <a href="https://www.linkedin.com/in/darren-soh-170999dsohjh/" 
           class="w3-bar-item w3-button">Linkedin</a>
           <a href="https://drive.google.com/drive/folders/1mG6-pTAdaueMibFldCXdw4qGqOpuqS_K?usp=sharing" 
-          class="w3-bar-item w3-button">Art</a>
+          class="w3-bar-item w3-button">ArtArchive</a>
         </div>
       </div>
       <!-- <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a> -->
@@ -44,6 +45,7 @@
     <a href="#HACK" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">HACK</a>
     <a href="#SWE" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SWE</a>
     <a href="#ML" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ML</a>
+    <a href="#ART" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ART</a>
     <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
   </div>
 
@@ -261,8 +263,10 @@
 
 <!-- Image of location/map -->
 <img src="/images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+<br></br>
+<!-- #ART -->
 
-<div class="w3-container w3-center w3-padding-64 " id="ART">
+<div class="w3-center w3-padding-64 " id="ART">
 
   <i src="https://hubs.mozilla.com/pumP975?embed_token=9e003f18c1cc7554ac3ec3fccc2a998f" style="width: 1024px; height: 768px;" allow="microphone; camera; vr; speaker;"></iframe>
 
