--- a/index.html
+++ b/index.html
@@ -266,16 +266,11 @@
 <br></br>
 <!-- #ART -->
 
-<div class="w3-center w3-padding-64 " id="ART">
+<div id="ART">
 
   <i src="https://hubs.mozilla.com/pumP975?embed_token=9e003f18c1cc7554ac3ec3fccc2a998f" style="width: 1024px; height: 768px;" allow="microphone; camera; vr; speaker;"></iframe>
 
 </div>
-
-
-
-
-
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-black w3-xlarge">
