--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <a href="#HACK" class="w3-bar-item w3-button w3-padding-large">HACK</a>
       <a href="#SWE" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SWE</a>
       <a href="#ML" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ML</a>
-      <a href="#ART" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ML</a>
+      <a href="#ART" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ART</a>
       <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
       <div class="w3-dropdown-hover w3-hide-small">
         <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
