--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
 <br></br>
 <!-- #ART -->
 
-<div id="ART">
+<div class="iframe-container" id="ART">
 
-  <i src="https://hubs.mozilla.com/pumP975?embed_token=9e003f18c1cc7554ac3ec3fccc2a998f" style="width: 1024px; height: 768px;" allow="microphone; camera; vr; speaker;"></iframe>
+  <i src="https://hubs.mozilla.com/pumP975?embed_token=9e003f18c1cc7554ac3ec3fccc2a998f" style="text-align:center; width: 100%; height: 768px;" allow="microphone; camera; vr; speaker;"></iframe>
 
 </div>
 
