--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
 <div class="w3-black" id="ART"></div>
 
-<i src="https://hubs.mozilla.com/pumP975?embed_token=9e003f18c1cc7554ac3ec3fccc2a998f" style="width: 1024px; height: 768px;" allow="microphone; camera; vr; speaker;"></iframe>
+<iframe src="https://hubs.mozilla.com/ZBwTESQ?embed_token=a84a4e4fdf664dea5c7f57d0484f9474" style="width: 1024px; height: 768px;" allow="microphone; camera; vr; speaker;"></iframe>
 
 
 
