--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
           class="w3-bar-item w3-button">Linkedin</a>
           <a href="https://drive.google.com/drive/folders/1mG6-pTAdaueMibFldCXdw4qGqOpuqS_K?usp=sharing" 
           class="w3-bar-item w3-button">ArtArchive</a>
+          <a href="https://github.com/darren170999" 
+          class="w3-bar-item w3-button">Github</a>
         </div>
       </div>
       <!-- <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a> -->
@@ -132,7 +134,7 @@
           <p><b>Tic-Tac-Toe</b></p>
           <p class="w3-opacity">CS50x Harvard, Cambridge</p>
           <p>Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
-          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+          <button class="w3-button w3-black w3-margin-bottom" href="https://github.com/darren170999" >View Project</button>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
