--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
           <p><b>Tic-Tac-Toe</b></p>
           <p class="w3-opacity">CS50x Harvard, Cambridge</p>
           <p>Utilized Object Oriented Programming skills and built self-made sprites.(C,Love2D,Lua)</p>
-          <button class="w3-button w3-black w3-margin-bottom" href="https://github.com/darren170999" >View Project</button>
+          <button class="w3-button w3-black w3-margin-bottom">View Project</button>
+          <a href="https://github.com/darren170999" 
+          class="w3-bar-item w3-button">Resume</a>
         </div>
       </div>
       <div class="w3-third w3-margin-bottom">
